libs/slim/test/typecheck/fail/swizzle_length.shader
property vec3 foo;

shader vertex {
    foo.xxxxx;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
